# dartagnan

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-example.yml  build.yml
example/: CMakeLists.txt  animal.cpp  animal.h  bindings_global.h  build_bindings.sh  dartagnan.json  license_template  typesystem.xml
example/app/: pubspec.yaml
